Move to JDK 17 for metalava
Test: ./gradlew
Change-Id: I6f9245799403897a588fcc88dd7e6260dbeee4e8