@@ -101,6 +101,7 @@ val zipTask: TaskProvider<Zip> = project.tasks.register(
 
 val testTask = tasks.named("test", Test::class.java)
 testTask.configure {
+    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
     maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).takeIf { it > 0 } ?: 1
     testLogging.events = hashSetOf(
         TestLogEvent.FAILED,
